Fix spacing in main and header elements

--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@ p {
   font-size: 1.25rem;
 }
 
+header {
+  border-bottom: 8px solid var(--color-gray-light);
+  height: 50%;
+}
+
+main {
+  background-color: var(--color-gray-dark);
+  padding-block-start: 72px;
+  min-height: 50%;
+}
+
 .max-width-wrapper {
   max-width: 800px;
   margin-inline-start: auto;
@@ -40,7 +51,7 @@ p {
 .intro-chunk {
   padding-block-start: 96px;
   padding-block-end: 64px;
-  border-bottom: 8px solid var(--color-gray-light);
+  padding-inline: 24px;
 }
 
 .intro-chunk .title {
@@ -59,10 +70,6 @@ p {
 
 p:not(p:last-of-type) {
   margin-block-end: 0.75em;
-}
-
-section.max-width-wrapper {
-  background-color: var(--color-gray-medium);
 }
 
 .card {
